--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,13 @@
-Hello
-
-
-git config --global user.name "Full name"
-git config --global user.email "youremail"
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta lang="en">
+    <meta viewport="width=device-width, initial-scale=1">
+    <title>Title</title>
+    <!--<link rel="stylesheet" href="css/style.css">-->
+    <!--<source src="js/script.js" defer>-->
+</head>
+<body>
+<p>Heloo,World</p>
+</body></html>
