--- a/Cityfarmer.html
+++ b/Cityfarmer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!-- Date: 9/7/2022
 <html>
 <head>
     <meta charset="utf-8">
@@ -9,11 +9,11 @@
     <!--<source src="js/script.js" defer>-->
 </head>
 <body>
-   <p>Clear Navigation Bar</p>
-   <p>Company Description and Featured Product</p>
-   <p>How to Contact Us</p>
-   <p>News and Events</p>
-   <p>Customer Interaction - Call to Action</p>
-   <p>Home Page Images</p>
+   <p>Clear Navigation Bar</p><hr>
+   <p>Company Description and Featured Product</p><hr>
+   <p>How to Contact Us</p><hr>
+   <p>News and Events</p><hr>
+   <p>Customer Interaction - Call to Action</p><hr>
+   <p>Home Page Images</p><hr> 
 </body>
 </html> 
