--- a/Index.html
+++ b/Index.html
@@ -9,5 +9,10 @@
     <!--<source src="js/script.js" defer>-->
 </head>
 <body>
-<p>Heloo,World</p>
-</body></html>
+    <h1>This is my first webpage!</h1>
+<p>Hello,World</p>
+
+<h2>This is a subheading!</h2>
+<p>This is extra text!</p>
+</body>
+</html>
