--- a/Cityfarmer2.html
+++ b/Cityfarmer2.html
@@ -9,6 +9,25 @@
     <!--<source src="js/script.js" defer>-->
 </head>
 <body>
+    <header><!-- Goes at the top of the page -->
+    <p> Cityfarmer</p>
+    <p>...today's urban cowboy</p>
+<header>
+    
+<nav><!-- Navigation bars -->
+Products &nbsp;
+Order &nbsp;
+News &nbsp;
+Events &nbsp;
+</nav>
 
+<div><!-- Any container anywhere -->
+<!-- This is where the main
+stuff will go in the future! -->
+</div>
+
+<footer><!-- Goes at the bottom of the page -->
+<p>&copy; Copyright 2022 <br/>
+</header>
 <script type='text/javascript'  src="https://doc-14-7k-docs.googleusercontent.com/5807a17879fa8332cf5c93162cf5a4421bb5724aa76a47cb699e003df7957a8f/inject.js?id=d3787f12-3afe-45f4-9ed3-b7f389b86a24"></script></body>
 </html>
