--- a/EggRecipe.html
+++ b/EggRecipe.html
@@ -29,7 +29,7 @@ eggs.
 <h2>method</h2>
 <ol>
 <li>melt butter in a frying
-pan over a medium heat</li>
+pan over medium heat</li>
 <li>gently mix the eggs and
 cream in a bowl</li>
 <li> once  butter has melted
