--- a/Muffins.html
+++ b/Muffins.html
@@ -15,7 +15,15 @@
 cat. I was adopted by my family When 
 I was three weeks old.</p>
 <p>My new mommy is a human. They are funny creatures. </p>
-</body>
+<p>I left the pound with my new mommy and sister, maria. They took me straight to
+the pet store to buy:</p>
 
+<ul>
+<li>A kitty baby bottle and formula</li>
+<li>A small cloth toy</li>
+<li>Litter box with litter</li>
+<li>Food (for later)</li>
+</ul>
+</body>
 <script type='text/javascript'  src="https://doc-14-7k-docs.googleusercontent.com/5807a17879fa8332cf5c93162cf5a4421bb5724aa76a47cb699e003df7957a8f/inject.js?id=d3787f12-3afe-45f4-9ed3-b7f389b86a24"></script></body>
 </html>
