--- a/Index.html
+++ b/Index.html
@@ -8,11 +8,32 @@
     <!--<link rel="stylesheet" href="css/style.css">-->
     <!--<source src="js/script.js" defer>-->
 </head>
+<style>
+    body{
+        font-family: Arial;
+    }
+
+    h1, h2, h3 {
+        font-family: Helvetica;
+    }
+
+    a{
+        Color: green;
+        Font-weight: bold;
+    }
+
+    #maindiv {
+        background-color: gainsboro;
+    }
+</style>
 <body>
+    <div id="maindiv">
     <h1>This is my first webpage!</h1>
 <p>Hello,World</p>
-
 <h2>This is a subheading!</h2>
 <p>This is extra text!</p>
+</div>
+
+<li>href= </li>
 </body>
 </html>
