--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,9 @@
     }
 
     a{
-        Color: green;
+        Color: rgb(139, 40, 206);
+        /* could also write color align-self:
+        color: #8B28CE;
         Font-weight: bold;
     }
 
@@ -37,3 +39,8 @@
 <li>href= </li>
 </body>
 </html>
+<img src="images/Redcat8727.jpg" alt="RedCat" height="250">
+<img src="cool.jpg" alt="Some cool image"
+<div>
+    
+    </div>
