--- a/About Me/Index.html
+++ b/About Me/Index.html
@@ -46,8 +46,7 @@
 
 <img src="https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/frmain_coon_cat_large-image-kybd7raz.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=ccdffe62a9044c653cfd21c49afbf6af" alt="Mainecoon" height="200" width="250">
 
-<p> My favorite quote is from Sun Tzu
-.</p>
+<p> My favorite quote is from Sun Tzu.</p>
 <blockquote cite="Know thy self, know thy enemy">
     
 </blockquote>
