--- a/Swimming.html
+++ b/Swimming.html
@@ -11,7 +11,7 @@
 <body>
 <h1> I like to go swimming in the 
 summer.</h1>
-<p>Swimming is my most favorite activity in the summer. When the sun is
+<p>Swimming is my favorite activity in the summer. When the sun is
 shining and the air is warm, you will find me dipping into my backyard pool.
 It's not an impressive pool, only three
 feet deep, but it's mine.</p>
