--- a/Schedule.html
+++ b/Schedule.html
@@ -10,10 +10,13 @@
 </head>
 <style>
     table td, th { border: 1px solid black; }
+    th { background-color: green}
+    .rheader{ background-color: blue}
+    body { background: linear-gradient(#FF964D, #DEB13E);}
 </style>
 <body>
     <table>
-     <<tr>
+     <tr>
         <th scope="col">&nbsp;</th>
         <th scope="col">Monday</th>
         <th scope="col">Tuesday</th>
@@ -21,46 +24,46 @@
         <th scope="col">Thursday</th>
         <th scope="col">Friday</th>
     </tr>
-    <<tr>
+    <tr>
         <th scope="row">1st hour</th>
-        <td colspan="5"><center>Office hours</td>
+        <td colspan="5"><center>Office hours</center></td>
         <td>
-    <<tr>
+    <tr>
     
     </tr>
-    <<tr>
+    <tr>
 
     <th scope="row">2nd hour</th>
-    <td colspan="5"><center>Office hours</td>
+    <td colspan="5"><center>Office hours</center></td>
     </tr>
 
-    <<tr>
+    <tr>
 
     <th scope="row">3rd hour</th>
-    <td colspan="5"><center>Office hours</td>
+    <td colspan="5"><center>Office hours</center></td>
     </tr>
 
     <th scope="row">4th hour</th>
-    <td colspan="5"><center>Office hours</td>
-    <<tr>
+    <td colspan="5"><center>Office hours</center></td>
+    <tr>
 
     <th scope="row">5th hour</th>
-    <td colspan="5"><center>Office hours</td>
+    <td colspan="5"><center>Office hours</center></td>
     </tr>
 
-    <<tr>
+    <tr>
     <th scope="row">6th hour</th>
-    <td colspan="5"><center>Office hours</td>
+    <td colspan="5"><center>Office hours</center></td>
     </tr>
 
-    <<tr>
+    <tr>
     <th scope="row">7th hour</th>
-    <td colspan="5"><center>Office hours</td>
+    <td colspan="5"><center>Office hours</center></td>
     </tr>
     
-    <<tr>
+    <tr>
     <th scope="row">8th hour</th>
-    <td colspan="5"><center>Office hours</td>
+    <td colspan="5"><center>Office hours</center></td>
 
     </tr>
     </table>
