--- a/Schedule.html
+++ b/Schedule.html
@@ -9,36 +9,41 @@
     <!--<source src="js/script.js" defer>-->
 </head>
 <style>
-    table td, th { border: 1px solid black; }
+    table td, th { border: 1px black; }
     th { background-color: green}
     .rheader{ background-color: blue}
     body { background: linear-gradient(#FF964D, #DEB13E);}
 </style>
 <body>
     <table>
+        <thead>
      <tr>
         <th scope="col">&nbsp;</th>
         <th scope="col">Monday</th>
         <th scope="col">Tuesday</th>
         <th scope="col">Wednesday</th>
         <th scope="col">Thursday</th>
-        <th scope="col">Friday</th>
+        <th scope="col">Friday</th>    
     </tr>
+    </thead>
     <tr>
-        <th scope="row">1st hour</th>
-        <td colspan="5"><center>Office hours</center></td>
-        <td>
+    <th scope="row">1st hour</th>
+    <td colspan="5"><center>Office hours</center></td>
     <tr>
     
     </tr>
-    <tr>
 
+    <tr>
     <th scope="row">2nd hour</th>
     <td colspan="5"><center>Office hours</center></td>
     </tr>
 
     <tr>
+    <th scope="row">Advisory</th>
+    <td colspan="5"><center>Office hours</center></td>
+    </tr>
 
+    <tr>
     <th scope="row">3rd hour</th>
     <td colspan="5"><center>Office hours</center></td>
     </tr>
