--- a/Schedule.html
+++ b/Schedule.html
@@ -10,7 +10,7 @@
 </head>
 <style>
     table td, th { border: 1px black; }
-    th { background-color: green}
+    th { background-color: #f0EC78}
     .rheader{ background-color: blue}
     body { background: linear-gradient(#FF964D, #DEB13E);}
 </style>
@@ -23,7 +23,7 @@
         <th scope="col">Tuesday</th>
         <th scope="col">Wednesday</th>
         <th scope="col">Thursday</th>
-        <th scope="col">Friday</th>    
+        <th scope="col">Friday</th>
     </tr>
     </thead>
     <tr>
@@ -35,17 +35,17 @@
 
     <tr>
     <th scope="row">2nd hour</th>
-    <td colspan="5"><center>Office hours</center></td>
+    <td colspan="2"><center>Office hours</center></td>
     </tr>
 
     <tr>
     <th scope="row">Advisory</th>
-    <td colspan="5"><center>Office hours</center></td>
+    <td colspan="2"><center>Office hours</center></td>
     </tr>
 
     <tr>
     <th scope="row">3rd hour</th>
-    <td colspan="5"><center>Office hours</center></td>
+    <td colspan="2"><center>Office hours</center></td>
     </tr>
 
     <th scope="row">4th hour</th>
