--- a/Schedule.html
+++ b/Schedule.html
@@ -10,9 +10,9 @@
 </head>
 <style>
     table td, th { border: 1px black; }
-    th { background-color: #f0EC78}
+    th { background-color: white}
     .rheader{ background-color: blue}
-    body { background: linear-gradient(#FF964D, #DEB13E);}
+    body { background: linear-gradient(, );}
 </style>
 <body>
     <table>
@@ -26,51 +26,53 @@
         <th scope="col">Friday</th>
     </tr>
     </thead>
+    <tbody>
     <tr>
     <th scope="row">1st hour</th>
-    <td colspan="5"><center>Office hours</center></td>
+    <td colspan="5"><center>Graphic Electronic Product</center></td>
     <tr>
     
     </tr>
 
     <tr>
     <th scope="row">2nd hour</th>
-    <td colspan="2"><center>Office hours</center></td>
+    <td colspan="5"><center>US History</center></td>
     </tr>
 
     <tr>
     <th scope="row">Advisory</th>
-    <td colspan="2"><center>Office hours</center></td>
+    <td colspan="2"><center>Advisory</center></td>
     </tr>
 
     <tr>
     <th scope="row">3rd hour</th>
-    <td colspan="2"><center>Office hours</center></td>
+    <td colspan="5"><center>English 11</center></td>
     </tr>
 
     <th scope="row">4th hour</th>
-    <td colspan="5"><center>Office hours</center></td>
+    <td colspan="5"><center>Web Design</center></td>
     <tr>
 
     <th scope="row">5th hour</th>
-    <td colspan="5"><center>Office hours</center></td>
+    <td colspan="5"><center>Robotics Engineering</center></td>
     </tr>
 
     <tr>
     <th scope="row">6th hour</th>
-    <td colspan="5"><center>Office hours</center></td>
+    <td colspan="5"><center>Personal Finance</center></td>
     </tr>
 
     <tr>
     <th scope="row">7th hour</th>
-    <td colspan="5"><center>Office hours</center></td>
+    <td colspan="5"><center>Algebra 2</center></td>
     </tr>
     
     <tr>
     <th scope="row">8th hour</th>
-    <td colspan="5"><center>Office hours</center></td>
+    <td colspan="5"><center>Genetics 1</center></td>
 
     </tr>
+    </tbody>
     </table>
 </body>
 </html>
