--- a/Schedule.html
+++ b/Schedule.html
@@ -12,7 +12,7 @@
     table td, th { border: 1px black; }
     th { background-color: white}
     .rheader{ background-color: blue}
-    body { background: linear-gradient(, );}
+    body { background: linear-gradient(green,red);}
 </style>
 <body>
     <table>
@@ -41,7 +41,7 @@
 
     <tr>
     <th scope="row">Advisory</th>
-    <td colspan="2"><center>Advisory</center></td>
+    <td colspan="5"><center>Advisory</center></td>
     </tr>
 
     <tr>
