--- a/Schedule.html
+++ b/Schedule.html
@@ -12,7 +12,10 @@
     table td, th { border: 1px black; }
     th { background-color: white}
     .rheader{ background-color: blue}
-    body { background: linear-gradient(green,red);}
+
+    body { background: linear-gradient(,);
+    background-size: 100% 350%;
+    }
 </style>
 <body>
     <table>
