--- a/contactme.html
+++ b/contactme.html
@@ -28,10 +28,11 @@
         /* 30 top/bot, 15 1/r */
         padding: 30 px;
     }
-    textarea{
-        body { background-color: gray}
+   .rpd{
+    color: red;
+    font-weight: normal;
 
-    }
+   }
 </style>
 <body>
     <h1>Contact Me</h1>
