--- a/contactme.html
+++ b/contactme.html
@@ -20,19 +20,32 @@
         padding: 15px;
         border-radius: 10px;
     }
+
+    body { background-color: #656; }
+    label { font-weight: bold; }
+    input { width: 250px; }
+    textarea { mid-width: 250; min-height: 50px; }
+    input, textarea { max-width: 250px; }
+    #flwupy { margin-left: -125px; }
+    #flwupy, #flwupn { margin-right: -100px; }
+    .flwlbl { font-weight: normal; }
+    form { min-width: 550px; margin-bottom: 20px; }
+
+
     #fdiv{
         background-color: #ccc;
-        border-radius: 3px;
-        width: 50%
+        border-radius: 5px;
+        width: 50%;
         text-align: center;
+        margin: 0 auto;
         /* 30 top/bot, 15 1/r */
-        padding: 30 px;
+        padding: 30px 15px;
     }
    .rpd{
     color: red;
     font-weight: normal;
-
    }
+
 </style>
 <body>
     <h1>Contact Me</h1>
