--- a/contactme.html
+++ b/contactme.html
@@ -9,7 +9,7 @@
     <!--<source src="js/script.js" defer>-->
 </head>
 <style>
-    *{font-family: verdana, Geneva, Tahoma
+    *{font-family: verdana, Geneva, Tahoma, sans-serif;
     }
 
     #sbutton {
@@ -21,7 +21,7 @@
         border-radius: 10px;
     }
 
-    body { background-color: #656; }
+    body { background-color: #666; }
     label { font-weight: bold; }
     input { width: 250px; }
     textarea { mid-width: 250; min-height: 50px; }
@@ -41,18 +41,27 @@
         /* 30 top/bot, 15 1/r */
         padding: 30px 15px;
     }
-   .rpd{
+
+    #attach {
+        background-color: white !important;
+        border: 1px solid #777;
+        border-radius: 2px;
+    }
+
+   .rpd {
     color: red;
     font-weight: normal;
    }
 
 </style>
 <body>
-    <h1>Contact Me</h1>
-    <form action="#" method="post">
-    <div>
+
+<center><h1 style:"font-size: 28px; color: white;">Contact Me</h1></center>
+    
+    <form action="#" method="post"> style="text-align: center;" onsubmit="alert(Not implemented yet');" id="contactform">
+    <div id="fdiv">
     <label for="myname">Name: <span class="rpd">*</label><br/>
-    <input type ="text" name="myname" id="myname" required>
+    <input type ="text" name="myname" id="myname" required/><br/><br/>
 
  <label for="subject">subject: <span class="rpd">*</label><br/>
     <input type="text" name="subject" id="subject" required
@@ -63,10 +72,10 @@
 
     </textarea><br/>
 
-    <label for="attach"> Attachments: <span class="rpd">*</label><br/>
+    <label for="attach"> Attachments: </label><br/>
     <input type="file" name="attach" id="attach"/>
 
-<label for="file" name="priority"> Priorty: <span class="rpd">*</label><br/>
+<label for="priority">Priorty: <span class="rpd">*</label><br/>
     <select name="priority" id="priority">
         <option disabeled selected value>-- Select an option
         <option value="low">Low</option>
