--- a/contactme.html
+++ b/contactme.html
@@ -58,7 +58,7 @@
 
 <center><h1 style:"font-size: 28px; color: white;">Contact Me</h1></center>
     
-    <form action="#" method="post"> style="text-align: center;" onsubmit="alert(Not implemented yet');" id="contactform">
+    <form action="#" method="post" style="text-align: center;" onsubmit="alert(Not implemented yet');" id="contactform">
     <div id="fdiv">
     <label for="myname">Name: <span class="rpd">*</label><br/>
     <input type ="text" name="myname" id="myname" required/><br/><br/>
