--- a/Iframetest.html
+++ b/Iframetest.html
@@ -9,6 +9,7 @@
     <!--<source src="js/script.js" defer>-->
 </head>
 <body>
-    <link>C:\Users\horinka.k1\Desktop\Web Design\recipe.css\pie.html
+    <Iframe src="https://github.com/">
+
 </body>
 </html>
