--- a/audiovideo/index.html
+++ b/audiovideo/index.html
@@ -4,16 +4,12 @@
     <meta charset="utf-8">
     <meta lang="en">
     <meta viewport="width=device-width, initial-scale=1">
-    <title>Pie recipe</title>
+    <title>Document</title>
     <!--<link rel="stylesheet" href="css/style.css">-->
     <!--<source src="js/script.js" defer>-->
 </head>
-<style>
-    {foreground-color: #A4A400;
-    background-color: #F0F0F0;
-    }
-</style>
 <body>
-    <h1>
+    <video src="puppy.mp4">Could not load video</video>
+    <audio src="test-audio.ogg" controls>Could not load audio</audio>
 </body>
 </html>
