--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -4,14 +4,26 @@
     <meta charset="utf-8">
     <meta lang="en">
     <meta viewport="width=device-width, initial-scale=1">
-    <title>Pie recipe</title>
+    <title>Grandma's Lemon Meringue pie</title>
     <!--<link rel="stylesheet" href="css/style.css">-->
     <!--<source src="js/script.js" defer>-->
 </head>
 <style>
     {foreground-color: #A4A400;
-    background-color: #F0F0F0;
+    background-color: #F0F0F0;}
+    head{
+text-align: center;
+font-size: bold 22pt;
+}{
+text-align: left;
+font-size: 18pt;
     }
+    body{
+    foreground-color: #404040
+    font-family: Georgia, Garamond, serif;
+    font-size: 11pt;
+    }
+
 </style>
 <body>
     <h1>
