--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -22,11 +22,13 @@ font-size: 18pt;
     foreground-color: #404040
     font-family: Georgia, Garamond, serif;
     font-size: 11pt;
-    
     }
 
 </style>
 <body>
-    <h1>
+    <h1> Recipe Directions</h1>
+    
+    <h2> Step one</h2>
+    <p></p> 
 </body>
 </html>
