--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -26,9 +26,9 @@ font-size: 18pt;
 
 </style>
 <body>
-    <h1> Recipe Directions</h1>
-    
-    <h2> Step one</h2>
+    <h1> Grandma's Lemon Meringue pie</h1>
+    <br/>
+    <img src="http://www.rose-hulman.edu/class/csse/csse290-WebProgramming/images/pie.jpg">
     <p></p> 
 </body>
 </html>
