--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -11,9 +11,10 @@
 <style>
     {foreground-color: #A4A400;
     background-color: #F0F0F0;}
-    head{
+    h1{
 text-align: center;
 font-size: bold 22pt;
+text-color: green;
 }{
 text-align: left;
 font-size: 18pt;
