--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -14,7 +14,7 @@
     h1{
 text-align: center;
 font-size: bold 22pt;
-text-color: green;
+background-color: gray;
 }{
 text-align: left;
 font-size: 18pt;
