--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -14,7 +14,7 @@
     h1{
 text-align: center;
 font-size: bold 22pt;
-background-color: light gray;
+background-color: ;
 }{
 text-align: left;
 font-size: 18pt;
