--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -30,6 +30,6 @@ font-size: 18pt;
     <h1> Grandma's Lemon Meringue pie</h1>
     <br/>
     <img src="http://www.rose-hulman.edu/class/csse/csse290-WebProgramming/images/pie.jpg">
-    <p></p> 
+    <p> 1 cup white sugar</p> 
 </body>
 </html>
