--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -30,6 +30,12 @@ font-size: 18pt;
     <h1> Grandma's Lemon Meringue pie</h1>
     <br/>
     <img src="http://www.rose-hulman.edu/class/csse/csse290-WebProgramming/images/pie.jpg">
-    <p> 1 cup white sugar</p> 
+    <p>One 9-inch pie</p>
+    <p>30 Min-Prep time</p>
+    <p> 10 Min-Cook time</p>
+    <p>40 Min-Total</p>
+    <p>8 Servings</p>
+    <br/>
+    <ol> 1 cup white sugar
 </body>
 </html>
