--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -14,14 +14,14 @@
     h1{
 text-align: center;
 font-size: bold 22pt;
-background-color: ;
+background-color: #C8D4F0 ;
 }{
 text-align: left;
 font-size: 18pt;
     }
     body{
-    foreground-color: #404040
-    font-family: Georgia, Garamond, serif;
+    background-color: #404040
+    font-family: Georgia;
     font-size: 11pt;
     }
 
@@ -35,7 +35,9 @@ font-size: 18pt;
     <p> 10 Min-Cook time</p>
     <p>40 Min-Total</p>
     <p>8 Servings</p>
+
     <br/>
+    
     <ol> 1 cup white sugar
 </body>
 </html>
