--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -14,7 +14,7 @@
     h1{
 text-align: center;
 font-size: bold 22pt;
-background-color: #C8D4F0 ;
+background-color: #D6CFFA ;
 }{
 text-align: left;
 font-size: 18pt;
@@ -37,7 +37,17 @@ font-size: 18pt;
     <p>8 Servings</p>
 
     <br/>
-    
-    <ol> 1 cup white sugar
+<h2>Ingredients</h2>
+<ol> 1 cup white sugar</ol>
+<li>2 tbsp all-purpose flour</li>
+<li>3 tbsp cornstarch</li>
+<li>1/4 tsp salt</li>
+<li>1 1/2 cups water</li>
+<li>2 lemons, juiced and zested</li>
+<li>2 tbsp butter</li>
+<li>4 egg yolks, beaten</li>
+<li>1 (9 inch) pie crust, baked</li>
+<li>4 egg whites</li>
+<li>6 tbsp white sugar</li>
 </body>
 </html>
