--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -9,13 +9,17 @@
     <!--<source src="js/script.js" defer>-->
 </head>
 <style>
-    {foreground-color: #A4A400;
+    {font-color: #A4A400;
     background-color: #F0F0F0;}
     h1{
 text-align: center;
 font-size: bold 22pt;
 background-color: #D6CFFA ;
-}{
+}
+h2{
+    background-color: #F0F0F0
+}
+{
 text-align: left;
 font-size: 18pt;
     }
@@ -38,7 +42,9 @@ font-size: 18pt;
 
     <br/>
 <h2>Ingredients</h2>
-<ol> 1 cup white sugar</ol>
+<ol> 
+
+<li>1 cup white sugar</li>
 <li>2 tbsp all-purpose flour</li>
 <li>3 tbsp cornstarch</li>
 <li>1/4 tsp salt</li>
@@ -49,5 +55,6 @@ font-size: 18pt;
 <li>1 (9 inch) pie crust, baked</li>
 <li>4 egg whites</li>
 <li>6 tbsp white sugar</li>
+</ol>
 </body>
 </html>
