--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -14,7 +14,7 @@
     h1{
 text-align: center;
 font-size: bold 22pt;
-background-color: #D6CFFA ;
+background-color: #F0F0F0 ;
 }
 h2{
     background-color: #F0F0F0
