--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -9,11 +9,12 @@
     <!--<source src="js/script.js" defer>-->
 </head>
 <style>
-    {font-color: #A4A400;
+    {: #A4A400;
     background-color: #F0F0F0;}
     h1{
 text-align: center;
 font-size: bold 22pt;
+font-color: #A4A400;
 background-color: #F0F0F0 ;
 }
 h2{
