--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -19,6 +19,7 @@ background-color: #F0F0F0 ;
 }
 h2{
     background-color: #F0F0F0
+    color: #A4A400
 }
 {
 text-align: left;
@@ -26,7 +27,7 @@ font-size: 18pt;
     }
     body{
     background-color: #404040
-    font-family: Georgia;
+    font: Georgia;0
     font-size: 11pt;
     }
 
