--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -18,7 +18,7 @@ color: #A4A400;
 background-color: #F0F0F0 ;
 }
 h2{
-    background-color: #F0F0F0
+    background-color: #F0F0F0;
     color: #A4A400
 }
 {
