--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -20,6 +20,9 @@ background-color: #F0F0F0 ;
 h2{
     background-color: #F0F0F0;
     color: #A4A400
+}h3{
+    background-color: #F0F0F0;
+    color: #A4A400
 }
 {
 text-align: left;
@@ -43,7 +46,7 @@ font-size: 18pt;
     <p>8 Servings</p>
 
     <br/>
-<h2>Ingredients</h2>
+<h2>INGREDIENTS</h2>
 <ul> 
 <li>1 cup white sugar</li>
 <li>2 tbsp all-purpose flour</li>
@@ -57,5 +60,9 @@ font-size: 18pt;
 <li>4 egg whites</li>
 <li>6 tbsp white sugar</li>
 </ul>
+
+<br/>
+<h3>DIRECTIONS</h3>
+
 </body>
 </html>
