--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -63,6 +63,22 @@ font-size: 18pt;
 
 <br/>
 <h3>DIRECTIONS</h3>
-
+<ol>
+<li>Preheat Oven: Preheat oven to 350 degrees F (175 degrees C). </li>
+<li>Make Lemon Filling: In a medium saucepan...</li>
+<ul>
+<li>Whisk together 1 cup sugar, flour, cornstarch, and salt</li>
+<li>Stir in water, lemon juice and lemon zest.</li>
+<li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
+<li>Stir in butter.</li>
+<li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
+<li>whisk egg yolk mixture back into remaining sugar mixture.</li>
+<li></li>
+</ul>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+</ol>
 </body>
 </html>
