--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -73,12 +73,18 @@ font-size: 18pt;
 <li>Stir in butter.</li>
 <li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
 <li>whisk egg yolk mixture back into remaining sugar mixture.</li>
-<li></li>
+<li>bring to a boil and continue to cook while stirring constantly until thick.</li>
+<li>Remove from heat</li>
+<li>Pour filling into baked pastry shell.</li>
 </ul>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
+<li>Make Meringue: In a large glass or metal bowl...</li>
+<ul>
+<li>Whip egg whites until foamy.</li>
+<li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
+<li>Spread meringue over pie, sealing the edges at the crust.</li>
+</ul>
+<li>Bake: Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
 </ol>
+<p>This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy; it's a piece of cake pie!</p>
 </body>
 </html>
