--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -23,6 +23,9 @@ h2{
 }h3{
     background-color: #F0F0F0;
     color: #A4A400
+}h4{
+    background-color: #F0F0F0;
+    color: #A4A400
 }
 {
 text-align: left;
@@ -86,5 +89,12 @@ font-size: 18pt;
 <li>Bake: Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
 </ol>
 <p>This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy; it's a piece of cake pie!</p>
+<br/>
+<h4>User Comments</h4>
+
+<p>This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.
+
+-Emilie S.</p>
+
 </body>
 </html>
