--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -26,6 +26,9 @@ h2{
 }h4{
     background-color: #F0F0F0;
     color: #A4A400
+}h5{
+    background-color: #F0F0F0;
+    color: #A4A400
 }
 {
 text-align: left;
@@ -90,11 +93,21 @@ font-size: 18pt;
 </ol>
 <p>This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy; it's a piece of cake pie!</p>
 <br/>
-<h4>User Comments</h4>
+<h4>USER COMMENTS</h4>
 
 <p>This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.
 
 -Emilie S.</p>
+
+<p>Q: what do you call an ape who loves pie?
+A: A meringue-utan.
+-Vickie K.</p>
+
+<p> This site can really engage my interest. Follow the recipe above and make it so! This pie is number one
+-Jean-Lue Piecard</p>
+<br/>
+
+<h5>LINKS</h5>
 
 </body>
 </html>
