--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -18,15 +18,19 @@ color: #A4A400;
 background-color: #F0F0F0 ;
 }
 h2{
+    font-size: bold 22pt;
     background-color: #F0F0F0;
     color: #A4A400
 }h3{
+    font-size: bold 22pt;
     background-color: #F0F0F0;
     color: #A4A400
 }h4{
+    font-size: bold 22pt;
     background-color: #F0F0F0;
     color: #A4A400
 }h5{
+    font-size: bold 22pt;
     background-color: #F0F0F0;
     color: #A4A400
 }
