--- a/recipe.css/pie.html
+++ b/recipe.css/pie.html
@@ -113,6 +113,6 @@ A: A meringue-utan.
 
 <h5>LINKS</h5>
 <p>Search for other lemon meringue pie recipes</p>
-<link>Home</link>
+<link>Home<link/>
 </body>
 </html>
