--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -16,14 +16,20 @@ table, td, th{
 </style>
 <body>
 <table>    
-<thread>
+<thead>
 
 <tr>
 <th scope="col">Image</th>
 <th scope="col">Videos</th>
 <th scope="col">Audio</th>
 </tr>
+</thead>
+<tbody>
+<tr>
+<th scope="row">Image</th>
 
+
+</tbody>
 </table>    
 </body>
 </html>
