--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -8,26 +8,29 @@
     <!--<link rel="stylesheet" href="css/style.css">-->
     <!--<source src="js/script.js" defer>-->
 </head>
-<style>
-table, td, th{
-    
-}
-
-</style>
 <body>
 <table>    
 <thead>
 
 <tr>
-<th scope="col">Image</th>
-<th scope="col">Videos</th>
 <th scope="col">Audio</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <th scope="row">Image</th>
+<td colspan="5"><center></td>
+</tr>
 
+<tr>
+<th scope="row">Videos</th>
+<td colspan="5"><center></td>
+</tr>
+
+<tr>
+<th scope="row">Audio</th>
+<td colspan="5"><center></td>
+</tr>
 
 </tbody>
 </table>    
