--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -11,15 +11,9 @@
 <body>
 <table>    
 <thead>
-
 <tr>
-<th scope="col">Audio</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<th scope="row">Image</th>
-<td colspan="5"><center></td>
+<th scope="col">Image</th>
+<td colspan="5"><c></td>
 </tr>
 
 <tr>
@@ -31,6 +25,10 @@
 <th scope="row">Audio</th>
 <td colspan="5"><center></td>
 </tr>
+</thead>
+<tbody>
+
+
 
 </tbody>
 </table>    
