--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -17,12 +17,12 @@
 </tr>
 
 <tr>
-<th scope="row">Videos</th>
+<th scope="col">Videos</th>
 <td colspan="5"><center></td>
 </tr>
 
 <tr>
-<th scope="row">Audio</th>
+<th scope="col">Audio</th>
 <td colspan="5"><center></td>
 </tr>
 </thead>
