--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -13,7 +13,7 @@
 <thead>
 <tr>
 <th scope="col">Image</th>
-<td colspan="5"><c></td>
+<td colspan="5"><left></td>
 </tr>
 
 <tr>
@@ -23,7 +23,7 @@
 
 <tr>
 <th scope="col">Audio</th>
-<td colspan="5"><center></td>
+<td colspan="5"><right></td>
 </tr>
 </thead>
 <tbody>
