--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -12,8 +12,17 @@
 <table>    
 <thead>
 <tr>
+
 <th scope="col">Image</th>
-<td colspan="5"><left></td>
+<th scope="col">Videos</th>
+<th scope="col">Audio</th>
+
+</tr>
+</thead>
+<tbody>
+<tr>
+<th scope="col">Image</th>
+<td colspan="5"><center></td>
 </tr>
 
 <tr>
@@ -23,11 +32,8 @@
 
 <tr>
 <th scope="col">Audio</th>
-<td colspan="5"><right></td>
+<td colspan="5"><center></td>
 </tr>
-</thead>
-<tbody>
-
 
 
 </tbody>
