--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -21,17 +21,17 @@
 </thead>
 <tbody>
 <tr>
-<th scope="col">Image</th>
+<th scope="row"></th>
 <td colspan="5"><center></td>
 </tr>
 
 <tr>
-<th scope="col">Videos</th>
+<th scope="row"></th>
 <td colspan="5"><center></td>
 </tr>
 
 <tr>
-<th scope="col">Audio</th>
+<th scope="row"></th>
 <td colspan="5"><center></td>
 </tr>
 
