--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -21,8 +21,8 @@
 </thead>
 <tbody>
 <tr>
-<th scope="row"></th>
-<td colspan="5"><center></td>
+<th scope="row">Placeholder</th>
+<td colspan="5"><justify></td>
 </tr>
 
 <tr>
