--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -8,6 +8,9 @@
     <!--<link rel="stylesheet" href="css/style.css">-->
     <!--<source src="js/script.js" defer>-->
 </head>
+<style>
+{background-color: purple;}
+</style>
 <body>
 <table>    
 <thead>
@@ -21,7 +24,7 @@
 </thead>
 <tbody>
 <tr>
-<th scope="row">Placeholder</th>
+<th scope="row"></th>
 <td colspan="5"><justify></td>
 </tr>
 
