--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -18,26 +18,26 @@
 <thead>
 <tr>
 
-<th scope="col">Image</th>
-<th scope="col">Videos</th>
-<th scope="col">Audio</th>
+<th scope="col"></th>
+<th scope="col"></th>
+<th scope="col"></th>
 
 </tr>
 </thead>
 <tbody>
 <tr>
-<th scope="row"></th>
+<th scope="row">Image</th>
 <td colspan="5"><justify></td>
 </tr>
 
 
 <tr>
-<th scope="row"></th>
+<th scope="row">Videos</th>
 <td colspan="5"><center></td>
 </tr>
 
 <tr>
-<th scope="row"></th>
+<th scope="row">Audio</th>
 <td colspan="5"><right></td>
 </tr>
 
