--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -21,24 +21,24 @@
 <th scope="col">Image</th>
 <th scope="col">Videos</th>
 <th scope="col">Audio</th>
-<td colspan="5"><center></td>
+
 </tr>
 </thead>
 <tbody>
 <tr>
 <th scope="row"></th>
-<td colspan="5"><justify></td>
+<td colspan="5"><center></center></td>
 </tr>
 
 
 <tr>
 <th scope="row"></th>
-<td colspan="5"><center></td>
+<td colspan="5"><center></center></td>
 </tr>
 
 <tr>
 <th scope="row"></th>
-<td colspan="5"><right></td>
+<td colspan="5"><center>Media</center></td>
 </tr>
 
 
