--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -10,7 +10,7 @@
 </head>
 <style>
 table, tr, td{ border: 1px black;
-
+ background-color: 
 }
 
 </style>
@@ -45,6 +45,9 @@ table, tr, td{ border: 1px black;
 
 
 </tbody>
-</table>    
+</table> 
+<ul>
+
+</ul>
 </body>
 </html>
