--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -10,7 +10,7 @@
 </head>
 <style>
 table, tr, td{ border: 1px black;
- background-color: 
+ background-color: red;
 }
 
 </style>
@@ -47,7 +47,12 @@ table, tr, td{ border: 1px black;
 </tbody>
 </table> 
 <ul>
-
+<h1>References</h1>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
 </ul>
 </body>
 </html>
