--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -9,8 +9,8 @@
     <!--<source src="js/script.js" defer>-->
 </head>
 <style>
-table, tr, td{ border: 1px black;
- background-color: red;
+table, tr, td{ border: 2px black;
+ background-color: white;
 }
 
 </style>
@@ -22,7 +22,7 @@ table, tr, td{ border: 1px black;
 <th scope="col">Image</th>
 <th scope="col">Videos</th>
 <th scope="col">Audio</th>
-
+<img></img>
 </tr>
 </thead>
 <tbody>
