--- a/Mixed-Media/index.html
+++ b/Mixed-Media/index.html
@@ -22,12 +22,13 @@ table, tr, td{ border: 2px black;
 <th scope="col">Image</th>
 <th scope="col">Videos</th>
 <th scope="col">Audio</th>
-<img>https://t3.ftcdn.net/jpg/05/20/53/20/240_F_520532020_pazR3Tk2VAIpkdBXDhV5YsBQZurvl3yG.jpg</img>
+
 </tr>
 </thead>
 <tbody>
 <tr>
 <th scope="row"></th>
+<img src="https://t3.ftcdn.net/jpg/05/20/53/20/240_F_520532020_pazR3Tk2VAIpkdBXDhV5YsBQZurvl3yG.jpg">
 <td colspan="5"><center></center></td>
 </tr>
 
